# djinn

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONVERSION_STATUS.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  Tiltfile  components.json  conflict_resolution_report.md  docker-compose.observability.yml  docker-compose.yml  install.sh  main_version.rs  package-lock.json  package.json  pnpm-lock.yaml  sidebar_head.tsx  task_66fb_handoff_comment.txt  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
crates/djinn-agent/: Cargo.toml
crates/djinn-agent/src/: commands.rs  compaction.rs  context.rs  events.rs  extension.rs  lib.rs  lsp.rs  output_parser.rs  patch.rs  process.rs  prompts.rs  skills.rs  task_merge.rs  test_helpers.rs  truncate.rs
crates/djinn-core/: Cargo.toml
crates/djinn-core/src/: commands.rs  error.rs  events.rs  lib.rs  message.rs
crates/djinn-db/: Cargo.toml  schema.sql
crates/djinn-db/migrations/: V20260302000001__initial_schema.sql  V20260303000001__task_board.sql  V20260303000006__model_health.sql  V20260303000008__task_memory_refs.sql  V20260303000010__sessions.sql  V20260303000011__task_merge_commit_sha.sql  V20260304000001__project_scoping.sql  V20260305000002__add_session_goose_id_and_paused.sql  V20260305120000__remove_blocked_status.sql  V20260305121500__add_project_config_fields.sql  V20260308000001__drop_session_continuation_of.sql  V20260309000005__session_messages.sql  V20260310000001__verification_failure_count.sql  V20260312000001__rebuild_tasks_add_backlog_status.sql  V20260313000001__epic_remove_in_review_status.sql  (+15 more)
crates/djinn-mcp/: Cargo.toml
crates/djinn-provider/: Cargo.toml
desktop/src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
server/: .env.example  Cargo.toml  DEVELOPMENT.md  Makefile  SQLX_OFFLINE.md  build.rs  fix_script.py  main_version.rs  rust-toolchain.toml
server/.cargo/: config.toml
server/.cargo-home/: .global-cache
server/.config/: hakari.toml  nextest.toml
server/.djinn/: brief.md  catalog.md
server/.sqlx/: README.md  query-0032fea5fa349a64a4df9010b55dc87c2371a784d58f2d3ed48668dd9468bdf5.json  query-00a440b18cbbdc2274dbe179c3a224b963a2a9f3c0816a808611ce94cc9b7cea.json  query-00e3b66f0be2d601c8366ac34f9b3cddd0490e1090a2a3ace8d75872128f8e69.json  query-0149beecd21a8b95a1eaa8e21ea334f1eabae6c07f89763c2023e779f83f77a3.json  query-01db2390e79c33016a32c57d07e517a96b31f6457b928608af70f3e3b27cd045.json  query-01e8eacf7f08db102066afb7c471814de2e667cd9619ef7c8cba76ac3e413c5a.json  query-03a35dd73e2535f762c8ab8608ece3f6b14e99ad5ebe23ed47e6e1546a79cf4c.json  query-051239106d034f0fc5d411140cf90e9f2584d7bdc728d909ebf6a12524e971b3.json  query-057e8a636e3119349be99728756b79d60ab54a70cae18b8b3b995eace636c867.json  query-05afcbc35d437565908f60dacd826db8bbb036e36313c2153c5ca25aafd645a6.json  query-06781d0fc63378531337e95806bf11a95e354aa96d629da0384f4155de8d81cb.json  query-07b012f8b7cb86c8994232abed2a4b3d701520edbab37ccc25691d9c2d066646.json  query-083d9b2f8a8b1dfdbd5641e905e40b4a52c4e09d7a576469d3a49ee3839ac39a.json  query-085c6ba1af016053d4b7afe42dde69658ec771718ec64ea4e51de574df783ace.json  query-0924461516ad9e4292e214210c3f6a1ce3dab68ff476b170c2f80995c6c4cafc.json  query-099bbaa4e32b65b630cfa3134b853620acb7fb311ee5b33e43a1fd72dd6a9576.json  query-0a901ca1d544db4801e5a537889c5af19523ee020350bb7dea1e16fd63db1818.json  query-0b1a5da1315717eca718bf1224fe523cfb44cbb065efd3ab315152aa860c01c3.json  query-0da9e3dc96e6a9f0fa678d1eade96f70505ca69190d35e4239b388946216e83a.json  query-0daed63a14529303903cd51d33530ac7734d88732ad32dee87c6eb353da123f7.json  query-0dfa0daed0c5e972a3ccf21380674233eb5c25fdafa4aa3ab73c0473caa98e85.json  query-0ef65e5fe0e5973c643bd2c57e505a270e625e473c03458b6ea9315806d26b05.json  query-0f2c6bfc255aae10ce78355a6a6fe12b64e0a654ba1b94e857b7f598225ba7bd.json  query-0f3e639cd7c4bd0917c6e6b1e4c1f12cc26e67993d26eba1c8f3a6ab254ac6ab.json  query-10107e3a0aa78648dde08ee63adc4ecff814d79a485d83513caaa3980831bf54.json  query-107a5d61ef2abbf034e2760b9b817067d92c485d1b023f560725c7197cc478e1.json  query-1176d8eb6296814a1ad7fe4e34141fe9a7b476f238104d12dfa822e816286cb8.json  query-12105049ba46a625588f129b32583929a186d854aa063486681401563c64f11e.json  query-123cf96b397342bbc01d9a4d4680e8195b74e78105ad0b113c53c68f28e42abb.json  query-14e622d52e3bd9122ca980796eb06f97c74291eedd5f107900a5c51c13dbad28.json  query-1519e1b85dd721810b992137be2ac7700306e49979fa0527ffba614fea599e8a.json  query-16b130d8a35fbf7600862e8f667d2cf5741309698e7b5f2497912f2c76cc9772.json  query-16fd5223d1fb8bda6e2aeee568f38033693cdf0de510cab106d6a136ca993287.json  query-17e28122eabc171de72f5f7203ffa27e50f32a7c9dee05ea8ceb60c465159de7.json  query-17e8384fd374c28a5b88a11ed534267ece18d982357b2c1dd3d889c90f186499.json  query-18253411a370880731d1f8c31cbebca572039f3499158565744e0c45a35a0d47.json  query-1b71f46d391a1922e16ef9a4a53d23f746e1ad3923204c88601b77283b65e997.json  query-1cece75d1d3ceec6bddfd585dede757703074b832a683df3af71192a01f82120.json  query-1d186179a0434695838df134870591ac43c6a36ffe73907928f72b155ab7d7c4.json  (+377 more)
server/docker/: README.md  build-runtime-image.sh  djinn-agent-runtime-base.Dockerfile  djinn-agent-runtime.Dockerfile  djinn-image-builder.Dockerfile  djinn-server.Dockerfile  docker-compose.langfuse.yml
server/scripts/: adr054_extracted_note_cleanup.py  adr055_sqlite_to_dolt_import.py  verify
server/src/: canonical_graph.rs  daemon.rs  embedded.rs  error.rs  events.rs  housekeeping.rs  index_tree.rs  lib.rs  logging.rs  main.rs  mcp_bridge.rs  mcp_contract_tests.rs  memory_fs.rs  memory_mount.rs  mirror_fetcher.rs  process.rs  repo_graph.rs  repo_map.rs  repo_map_personalization.rs  scip_parser.rs  semantic_memory.rs  sse.rs  task_confidence.rs  test_helpers.rs
server/src/db/: dolt.rs  (+5 more)
server/tests/: desktop_sse_event_handlers.test.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  auth_callback.rs  commands.rs  dev_server.rs  lib.rs  main.rs  server.rs  token_refresh.rs
(+2596 files in other folders)
