[package]
name = "djinn-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Goose: in-process agent harness (ADR-008). default-features=false excludes V8/Deno.
goose = { path = "../../references/goose/crates/goose", default-features = false }
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
git2 = "0.20"
dirs = "6"
refinery = { version = "0.9", features = ["int8-versions"] }
rmcp = { version = "0.17", features = ["server", "transport-streamable-http-server"] }
ring = "0.17"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
notify = "7"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
