[package]
name = "djinn-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Goose: in-process agent harness (ADR-008). default-features=false excludes V8/Deno.
# Pinned to latest stable release tag for reproducible runtime behavior.
goose = { git = "https://github.com/block/goose.git", tag = "v1.26.1", default-features = false }
goose-mcp = { git = "https://github.com/block/goose.git", tag = "v1.26.1" }
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
git2 = "0.20"
dirs = "6"
refinery = { version = "0.9", features = ["int8-versions"] }
rmcp = { version = "0.15", features = ["server", "client", "transport-io", "transport-streamable-http-server", "transport-streamable-http-client-reqwest"] }
libc = "0.2"
ring = "0.17"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }
regex = "1.12.3"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
