[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
workspace-hack = { version = "0.1.0", path = "crates/workspace-hack" }
globset = "0.4"

[package]
name = "djinn-server"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
default = []
qdrant = ["djinn-db/qdrant"]
vendored = ["git2/vendored-libgit2", "git2/vendored-openssl"]
memory-mount = ["dep:fuser"]

[dependencies]
djinn-agent = { path = "crates/djinn-agent" }
djinn-core = { path = "crates/djinn-core", features = ["sqlx"] }
djinn-db = { path = "crates/djinn-db" }
djinn-memory = { path = "crates/djinn-memory" }
djinn-git = { path = "crates/djinn-git" }
djinn-graph = { path = "crates/djinn-graph" }
djinn-image-controller = { path = "crates/djinn-image-controller" }
djinn-k8s = { path = "crates/djinn-k8s" }
djinn-control-plane = { path = "crates/djinn-control-plane" }
djinn-provider = { path = "crates/djinn-provider" }
djinn-runtime = { path = "crates/djinn-runtime" }
djinn-stack = { path = "crates/djinn-stack" }
djinn-supervisor = { path = "crates/djinn-supervisor" }
djinn-workspace = { path = "crates/djinn-workspace" }
kube = { version = "0.95", features = ["runtime"] }
async-trait = "0.1"
anyhow = "1"
bincode = "1.3"
axum = "0.8"
http-body-util = "0.1"
tower-service = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
rust-embed = { version = "8", features = ["mime-guess"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "form"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
git2 = "0.20"
dirs = "6"
protobuf = "3"
rmcp = { version = "0.16", features = ["server", "client", "transport-io", "transport-streamable-http-server", "transport-streamable-http-client-reqwest"] }
libc = "0.2"
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
serde_urlencoded = "0.7"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }
regex = "1.12.3"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["reqwest-rustls"] }
opentelemetry-semantic-conventions = "0.31"
petgraph = "0.8"
scip = "0.7"
globset = "0.4"
tempfile = "3"
workspace-hack.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
fuser = { version = "0.15", optional = true, default-features = false }

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }
proptest = "1"
rstest = "0.24"
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }

[profile.dev]
debug = "line-tables-only"
[profile.dev.build-override]
opt-level = 3
