[package]
name = "djinnos-desktop"
version = "0.1.0"
description = "DjinnOS Desktop Application"
authors = ["DjinnOS Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "djinnos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
log = "0.4"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
base64 = { version = "0.22", default-features = false }
url = { version = "2", default-features = false }
once_cell = { version = "1", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

# PKCE dependencies
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2"
once_cell = "1"
