[package]
name = "djinnos-desktop"
version = "0.1.0"
description = "DjinnOS Desktop Application"
authors = ["DjinnOS Team"]
edition = "2021"

[lib]
name = "djinnos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "net", "sync", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
log = "0.4"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
base64 = { version = "0.22", default-features = false }
url = { version = "2", default-features = false }
once_cell = { version = "1", default-features = false }
axum = { version = "0.7", features = ["tokio"] }
urlencoding = "2"
keyring = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
