[package]
name = "djinn-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
djinn-core = { path = "../djinn-core" }
anyhow = "1"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
