[package]
name = "djinn-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"], optional = true }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
