[package]
name = "djinn-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
djinn-core = { path = "../djinn-core", features = ["sqlx"] }
djinn-db = { path = "../djinn-db" }
djinn-git = { path = "../djinn-git" }
djinn-provider = { path = "../djinn-provider" }
async-trait = "0.1"
dirs = "6"
rmcp = { version = "0.16", features = ["server", "transport-streamable-http-server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
