[package]
name = "djinn-provider"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
djinn-core = { path = "../djinn-core" }
djinn-db = { path = "../djinn-db" }
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
bytes = "1"
dirs = "6"
futures = "0.3"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["reqwest-rustls"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "form"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
