[package]
name = "djinnos-desktop"
version = "0.1.0"
description = "DjinnOS Desktop Application"
authors = ["DjinnOS Team"]
edition = "2021"

[lib]
name = "djinnos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "net", "sync", "rt-multi-thread"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
log = "0.4"
once_cell = { version = "1", default-features = false }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
djinn-server = { path = "../../server" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
