[package]
name = "djinn-agent"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
djinn-core = { path = "../djinn-core" }
djinn-db = { path = "../djinn-db" }
djinn-git = { path = "../djinn-git" }
djinn-provider = { path = "../djinn-provider" }
djinn-mcp = { path = "../djinn-mcp" }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
async-stream = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "form"] }
rmcp = { version = "0.16", features = ["server", "client", "transport-io", "transport-streamable-http-server", "transport-streamable-http-client-reqwest"] }
schemars = "1"
regex = "1.12.3"
git2 = "0.20"
dirs = "6"
libc = "0.2"
wait-timeout = "0.2"
base64 = "0.22"
sha2 = "0.10"
globset = "0.4"
ring = "0.17"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v7"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"
insta = { version = "1", features = ["json"] }
