[package]
name = "djinn-control-plane"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
djinn-core = { path = "../djinn-core", features = ["sqlx"] }
djinn-db = { path = "../djinn-db" }
djinn-memory = { path = "../djinn-memory" }
djinn-git = { path = "../djinn-git" }
djinn-provider = { path = "../djinn-provider" }
djinn-stack = { path = "../djinn-stack" }
async-trait = "0.1"
dirs = "6"
rmcp = { version = "0.16", features = ["server", "transport-streamable-http-server"] }
http = "1"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v7"] }
futures = "0.3"
workspace-hack.workspace = true

[dev-dependencies]
tempfile = "3"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls", "macros"] }
anyhow = "1"
