[package]
name = "djinn-control-plane"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
djinn-core = { path = "../djinn-core", features = ["sqlx"] }
djinn-db = { path = "../djinn-db" }
djinn-memory = { path = "../djinn-memory" }
djinn-git = { path = "../djinn-git" }
djinn-provider = { path = "../djinn-provider" }
djinn-stack = { path = "../djinn-stack" }
async-trait = "0.1"
dirs = "6"
rmcp = { version = "0.16", features = ["server", "transport-streamable-http-server"] }
http = "1"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v7"] }
futures = "0.3"
anyhow = "1"
workspace-hack.workspace = true

[features]
# Exposes `test_support::McpTestHarness` + stub bridge impls for downstream
# integration tests (e.g. contract tests that previously needed `AppState`).
# Off by default; enabled automatically under `cfg(test)` for this crate.
test-support = []

[dev-dependencies]
tempfile = "3"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls", "macros"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
insta = { version = "1", features = ["json", "redactions"] }
uuid = { version = "1", features = ["v7"] }
