[package]
name = "djinn-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
workspace-hack.workspace = true

[dev-dependencies]
tempfile = "3"
