[package]
name = "djinn-db"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
test-support = []

[dependencies]
djinn-core = { path = "../djinn-core", features = ["sqlx"] }
dirs = "6"
globset = "0.4"
refinery = { version = "0.9", features = ["int8-versions", "rusqlite"] }
ring = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
workspace-hack.workspace = true

[dev-dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
