[package]
name = "djinn-db"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
test-support = []
qdrant = ["dep:qdrant-client"]

[dependencies]
async-trait = "0.1"
djinn-core = { path = "../djinn-core", features = ["sqlx"] }
dirs = "6"
globset = "0.4"
ring = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
qdrant-client = { version = "1", optional = true, default-features = false, features = ["reqwest"] }
sqlite-vec = "0.1"
sqlx = { version = "0.8", features = ["sqlite", "mysql", "runtime-tokio-rustls", "macros", "migrate"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
workspace-hack.workspace = true

[dev-dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
