[package]
name = "djinn-db"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
test-support = []
qdrant = ["dep:qdrant-client"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
djinn-core = { path = "../djinn-core", features = ["sqlx"] }
djinn-memory = { path = "../djinn-memory", features = ["sqlx"] }
dirs = "6"
globset = "0.4"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
qdrant-client = { version = "1", optional = true, default-features = false, features = ["reqwest"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls", "macros", "migrate"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.6"
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
workspace-hack.workspace = true

[dev-dependencies]
futures = "0.3"
proptest = "1"
rstest = "0.24"
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
