[package]
name = "djinn-graph"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
djinn-core = { path = "../djinn-core" }
djinn-db = { path = "../djinn-db" }
djinn-memory = { path = "../djinn-memory" }
djinn-stack = { path = "../djinn-stack" }

anyhow = "1"
async-trait = "0.1"
bincode = "1.3"
futures = "0.3"
hex = "0.4"
petgraph = "0.8"
protobuf = "3"
scip = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["process", "sync", "fs", "macros", "rt", "rt-multi-thread", "time", "io-util"] }
tracing = "0.1"

workspace-hack.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v7"] }
