[package]
name = "djinn-image-builder"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
djinn-stack = { path = "../djinn-stack" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
workspace-hack.workspace = true

[dev-dependencies]
pretty_assertions = "1"
