[package]
name = "djinn-image-controller"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
djinn-core = { path = "../djinn-core" }
djinn-db = { path = "../djinn-db" }
djinn-stack = { path = "../djinn-stack" }
anyhow = "1"
async-trait = "0.1"
git2 = "0.20"
hex = "0.4"
k8s-openapi = { version = "0.23", features = ["v1_30"] }
kube = { version = "0.95", features = ["runtime", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tracing = "0.1"
workspace-hack.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
