[package]
name = "djinn-k8s"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
djinn-core = { path = "../djinn-core" }
djinn-db = { path = "../djinn-db" }
djinn-runtime = { path = "../djinn-runtime" }
djinn-supervisor = { path = "../djinn-supervisor" }
djinn-workspace = { path = "../djinn-workspace" }
anyhow = "1"
async-trait = "0.1"
bincode = "1.3"
kube = { version = "0.95", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "time", "net", "io-util", "process"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
workspace-hack.workspace = true

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7"
