[package]
name = "djinn-memory"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
default = []
sqlx = ["dep:sqlx", "djinn-core/sqlx"]

[dependencies]
djinn-core = { path = "../djinn-core" }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls", "macros"], optional = true }
workspace-hack.workspace = true
