[package]
name = "djinn-runtime"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
default = []
# Enables `TestRuntime` outside of `cfg(test)` so downstream crates (and the
# eventual supervisor-runner cutover) can depend on an in-process
# `SessionRuntime` implementation for integration tests.
test-runtime = []

[dependencies]
djinn-core = { path = "../djinn-core" }
async-trait = "0.1"
bincode = "1.3"
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "macros", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
workspace-hack.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
