[package]
name = "djinn-stack"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["now", "serde"] }
git2 = "0.20"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.9"
tracing = "0.1"
workspace-hack.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
