[package]
name = "djinn-supervisor"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
djinn-core = { path = "../djinn-core" }
djinn-db = { path = "../djinn-db" }
djinn-git = { path = "../djinn-git" }
djinn-provider = { path = "../djinn-provider" }
djinn-runtime = { path = "../djinn-runtime" }
djinn-workspace = { path = "../djinn-workspace" }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
workspace-hack.workspace = true

[dev-dependencies]
bincode = "1.3"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
