[package]
name = "djinn-workspace"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
anyhow = "1"
djinn-git = { path = "../djinn-git" }
git2 = "0.20"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
tracing = "0.1"
workspace-hack.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
